fix: right pane overflow

--- a/client/src/DesktopApp.css
+++ b/client/src/DesktopApp.css
@@ -89,6 +89,7 @@ input {
 	width: 30%;
 	border: 1px solid #ccc;
 	overflow: scroll;
+	height: 96vh;
 }
 
 .controls {
